--- a/src/css/App.css
+++ b/src/css/App.css
@@ -17,3 +17,18 @@ main h1 {
   display: flex;
   justify-content: space-between;
 }
+
+.container.splash {
+  background-color: #5b3892;
+  height: 100vh;
+  width: 100vw;
+}
+
+.splash .imageContainer {
+  margin: auto;
+  width: 200px;
+}
+
+.splash img {
+  width: 200px;
+}
